@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-03-16T01:54:41Z",
-  "count_outdated" : 1411,
-  "uniques_outdated" : 931,
-  "count" : 1422,
-  "uniques" : 942,
+  "timestamp" : "2025-03-17T01:51:48Z",
+  "count_outdated" : 1412,
+  "uniques_outdated" : 932,
+  "count" : 1423,
+  "uniques" : 943,
   "clones" : [
-    {
-      "timestamp": "2025-03-03T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-03-04T00:00:00Z",
       "count": 1,
@@ -88,6 +79,15 @@
     },
     {
       "timestamp": "2025-03-14T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-03-16T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
